<resources>
    <string name="app_name">ProjetSession</string>
    <string name="bienvenue">Veuillez vous connecter.</string>
    <string name="password">Mot de passe</string>
    <string name="numero">Numero de telephone</string>
    <string name="email">Email</string>
    <string name="login">Connexion</string>
    <string name="signup">Creer un compte</string>
    <string name="forgot_password">Mot de passe oublie ?</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="firstname">Prenom</string>
    <string name="lastname">Nom</string>
    <string name="alreadyuser">Vous avez deja un compte ?</string>
    <string name="createaccount">S\'inscrire</string>
    <string name="sendemail">Reinitialiser le mot de passe</string>
    <string name="textforgot">Entrez votre Nom d\'utilisateur</string>
    <string name="backtologin">Retourner vers la connexion</string>
    <string name="add">Ajouter</string>
    <string name="desc">Description</string>
    <string name="date">Date</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_photo">Selectionner une photo</string>
    <string name="use_camera">Prendre une photo</string>
    <string name="modifier">Modifier</string>
    <string name="adresse">Adresse</string>
</resources>