<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/c"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue"
            android:lines="2"
            android:layout_below="@id/logo"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingVertical="10dp"
            android:layout_marginVertical="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/welcome" >

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:autofillHints=""
                android:inputType="text"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/username_layout" >

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:autofillHints=""
                android:inputType="textPassword"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@id/password_layout"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/go_to_subcribe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_marginHorizontal="30dp"
            android:text="@string/signup" />

        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/go_to_subcribe_button"
            android:layout_marginHorizontal="30dp"
            android:text="@string/forgot_password" />

    </RelativeLayout>

</LinearLayout>