<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/c"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textforgot"
            android:lines="2"
            android:layout_below="@id/logo"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingVertical="10dp"
            android:layout_marginVertical="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/welcome" >

            <EditText
                android:id="@+id/resetpassword_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:autofillHints=""
                android:inputType="text"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/resetpassword_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendemail"
            android:layout_below="@id/email_layout"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp" />
        <Button
            android:id="@+id/back_to_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backtologin"
            android:layout_below="@id/resetpassword_button"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

</LinearLayout>