<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/c"/>

        <!--<TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue"
            android:lines="2"
            android:layout_below="@id/logo"
            android:gravity="center"
            android:textSize="10sp"
            android:paddingVertical="10dp"
            android:layout_marginVertical="10dp"
            />-->
        <LinearLayout
            android:layout_below="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_name"
            android:orientation="horizontal"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_firstname"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:autofillHints=""
                    android:inputType="text"
                    android:layout_margin="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_lastname"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                >

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:autofillHints=""
                    android:inputType="text"
                    android:layout_margin="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/layout_name" >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:autofillHints=""
                android:inputType="text"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/username_layout"  >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/email_layout" >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:autofillHints=""
                android:inputType="textPassword"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/password_layout" >

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:autofillHints=""
                android:inputType="number"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/new_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_layout"
            android:layout_marginHorizontal="30dp"
            android:text="@string/createaccount" />

        <Button
            android:id="@+id/go_to_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_user_button"
            android:layout_marginHorizontal="30dp"
            android:text="@string/alreadyuser" />

    </RelativeLayout>

</LinearLayout>