<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_alignParentTop="true"
            android:id="@+id/image_view"
            android:src="@drawable/baseline_photo_camera_back_24"
            android:layout_centerInParent="true"
            android:layout_width="160dp"
            android:layout_height="160dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/image_view"
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:autofillHints=""
                android:inputType="text"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/name_layout"  >

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc"
                android:autofillHints=""
                android:inputType="text"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/description_layout" >

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:autofillHints=""
                android:inputType="date"
                android:layout_margin="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_layout"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adresse_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="6">
                <EditText
                    android:id="@+id/adresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/adresse"
                    android:focusable="false"
                    android:autofillHints=""
                    android:inputType="date"
                    android:layout_margin="5dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/current_location_button"
                android:src="@drawable/baseline_my_location_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"

                />
        </LinearLayout>



        <Button
            android:id="@+id/new_repport_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_location"
            android:layout_marginHorizontal="30dp"
            android:text="@string/add" />


    </RelativeLayout>
    <include
        android:id="@+id/image_picker"
        layout="@layout/image_picker" />

</LinearLayout>